# Lemma

./: .deepsource.toml  .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: deny.toml
.github/workflows/: npm-release.yml  pages.yml  quality.yml  release.yml
cli/: Cargo.toml  README.md
cli/src/: error_formatter.rs  formatter.rs  interactive.rs  main.rs  mcp.rs  server.rs
cli/tests/: cli_integration_test.rs
cli/tests/integrations/: interactive.rs  mcp.rs  mod.rs  run.rs  server.rs
docs/: CLI.md  _config.yml  contributing.md  index.md  multi_facts.md  reference.md  roadmap.md  testing_and_enhancement_plan.md  user_types.md  veto_semantics.md  wasm.md  whitepaper.md
docs/examples/: 01_simple_facts.lemma  02_rules_and_unless.lemma  05_date_handling.lemma  06_tax_calculation.lemma  07_shipping_policy.lemma  09_stress_test.lemma
documentation/: CLI.md  Gemfile  contributing.md  index.md  reference.md  roadmap.md  testing_and_enhancement_plan.md  veto_semantics.md  whitepaper.md
documentation/examples/: 02_rules_and_unless.lemma  03_document_references.lemma  04_unit_conversions.lemma  08_rule_references.lemma  09_stress_test.lemma  10_compensation_policy.lemma  11_document_composition.lemma
documentation/plans/: evaluation_trace_format_v2.md  inversion.md  user_types.md
lemma/: Cargo.toml  README.md  package.json  test-wasm.js
lemma/fuzz/: Cargo.toml  README.md
lemma/fuzz/fuzz_targets/: fuzz_deeply_nested.rs  fuzz_expressions.rs  fuzz_fact_overrides.rs  fuzz_literals.rs  fuzz_parser.rs
lemma/src/: analysis.rs  ast.rs  engine.rs  error.rs  lib.rs  operation_result.rs  resource_limits.rs  response.rs  semantic.rs  validator.rs  wasm.rs
lemma/src/evaluator/: context.rs  datetime.rs  expression.rs  mod.rs  operations.rs  rules.rs  timeout.rs  units.rs
lemma/src/inversion/: algebra.rs  boolean.rs  domain_extraction.rs  domain_ops.rs  hydration.rs  inverter.rs  mod.rs  shape.rs  target.rs
lemma/src/parser/: expressions.rs  facts.rs  lemma.pest  literals.rs  mod.rs  rules.rs  units.rs
lemma/src/serializers/: json.rs  mod.rs  msgpack.rs  protobuf.rs
lemma/src/tests/: analysis.rs  basic_parsing.rs  context.rs  context_tests.rs  edge_cases.rs  engine.rs  error.rs  expression_parsing.rs  expression_tests.rs  expressions.rs  fact_overrides.rs  literal_parsing.rs  mod.rs  rule_tests.rs  rules.rs  semantic.rs  serializers.rs  topological_sort.rs  unit_parsing.rs
lemma/tests/: algebraic_edge_cases.rs  bdd_consensus.rs  bdd_partial_simplification.rs  bdd_simplification.rs  cross_document_references.rs  currency_validation.rs  currency_validation_test.rs  datetime_edge_cases.rs  datetime_edge_cases_test.rs  document_reference_bugs.rs  documentation_examples.rs  empty_input.rs  empty_input_test.rs  end_to_end.rs  end_to_end_test.rs  equal_operator.rs  equal_operator_test.rs  error_messages.rs  error_messages_test.rs  fact_override_type_validation.rs  get_valid_domain.rs  get_valid_domain_multiple.rs  integration_comprehensive.rs  integration_comprehensive_test.rs  inversion.rs  inversion_comparison_operators.rs  inversion_display_serialize.rs  inversion_enhancements.rs  inversion_error_messages.rs  inversion_guards.rs  inversion_math_ops.rs  inversion_missing_cases.rs  inversion_real_world.rs  inversion_recursive_expansion.rs  inversion_rule_reference_demo.rs  inversion_smoke.rs  json_serializer.rs  json_serializer_test.rs  math_ops.rs  modulo_power.rs  (+34 more)
lemma/wasm/: README.md  build.js  index.html  test.js
