[workspace]
resolver = "3"
members = [
    "cli",
    "lemma",
]
exclude = ["lemma/fuzz"]

[workspace.package]
version = "0.6.8"
edition = "2021"
authors = ["benrogmans <ben@amrai.nl>"]
description = "A language that means business."
license = "Apache-2.0"
repository = "https://github.com/benrogmans/lemma"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.0"
pest = "2.7"
pest_derive = "2.7"
clap = { version = "4.0", features = ["derive"] }
axum = "0.7.9"
tokio = { version = "1.39.2", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
rust_decimal = { version = "1.33", features = ["serde"] }
ariadne = "0.4"
wasm-bindgen = "0.2.104"
console_error_panic_hook = "0.1"
