[package]
name = "lemma-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "lemma"
path = "src/main.rs"

[dependencies]
lemma = { path = "../lemma" }
clap.workspace = true
anyhow.workspace = true
chrono.workspace = true
walkdir = "2.4"
crossterm = "0.27"
comfy-table = "7.2"
inquire = { version = "0.9", features = ["date"] }

# Server dependencies (optional)
axum = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
tower = { workspace = true, features = ["util"], optional = true }
tower-http = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

[features]
default = ["server", "mcp"]
server = ["axum", "tokio", "tower", "tower-http", "serde", "serde_json", "tracing", "tracing-subscriber"]
mcp = ["serde", "serde_json", "tracing", "tracing-subscriber"]

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"
proptest = "1.4"
